tmp/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mysql
  template:
    metadata:
      labels:
        run: mysql
    spec:
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql
      containers:
      - image: mysql:latest
        name: mysql
        ports:
          - containerPort: 3306
            name: db
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
