tmp/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mysql
  name: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: db
  selector:
    run: mysql
