tmp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: wildfly
  name: wildfly
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: web
  selector:
    run: wildfly
